--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,20 +19,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/btnMarkdown"
+            app:layout_constraintRight_toLeftOf="@+id/btnUnsplash"
             app:layout_constraintHorizontal_chainStyle="spread"
             android:text="Upload"
             android:onClick="@{() -> view.onUploadClick()}"/>
+
+        <Button
+            android:id="@+id/btnUnsplash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btnUpload"
+            app:layout_constraintRight_toLeftOf="@+id/btnMarkdown"
+            android:text="Unsplash"
+            android:onClick="@{() -> view.onUnsplashClick()}"/>
 
         <Button
             android:id="@+id/btnMarkdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/btnUpload"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btnUnsplash"
             app:layout_constraintRight_toLeftOf="@+id/btnHugo"
             android:text="Markdown"
             android:onClick="@{() -> view.onMarkdownClick()}"/>
@@ -42,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/btnMarkdown"
             app:layout_constraintRight_toRightOf="parent"
             android:text="Hugo"
@@ -51,10 +62,11 @@
         <ImageView android:id="@+id/imgPreview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/btnUpload"
+            app:layout_constraintBottom_toTopOf="@+id/btnUpload"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="20dp"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="20dp"/>
 
         <ProgressBar android:id="@+id/progress"
             android:layout_width="wrap_content"
